atlas-api-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  annotations: 
  labels: 
    io.kompose.service: atlas-api
  name: atlas-api
  namespace: atlas
spec: 
  replicas: 1
  strategy: {}
  template: 
    metadata: 
      labels: 
        app: atlas-api
        io.kompose.service: atlas-api
    spec: 
      containers: 
        - env: 
            - 
              name: JWT_SECRET
              value: myjwts3cr3t
            - 
              name: MONGO_DATABASE
              value: atlas
            - 
              name: MONGO_HOST
              value: atlas-mongodb
            - 
              name: MONGO_PASSWORD
              value: YXRsYXNjb2xsZWN0b3J1c2VyCg==
            - 
              name: MONGO_PORT
              value: "27017"
            - 
              name: MONGO_SOURCE_COLLECTION
              value: AtlasAgentsMsg
            - 
              name: MONGO_TARGET_COLLECTION
              value: AtlasDiscoveredData
            - 
              name: MONGO_USER
              value: atlascollectoruser
            - 
              name: POSTGRES_DATABASE
              value: atlas
            - 
              name: POSTGRES_HOST
              value: atlas-postgresql
            - 
              name: POSTGRES_PASSWORD
              value: bi0Gl3nml7
            - 
              name: POSTGRES_PORT
              value: "5432"
            - 
              name: POSTGRES_USER
              value: atlas
            - 
              name: TOKEN_EXPIRES_IN
              value: "60000"
            - 
              name: AUTH_SOURCE
              value: VAULT
            - 
              name: VAULT_HOST
              value: vault
            - 
              name: VAULT_PORT
              value: "8200"
            - 
              name: VAULT_URI
              value: "http://10.0.1.43:30616/v1/secret/atlas/users/auth/"
            - 
              name: VAULT_TOKEN
              value: s.T21L5KrpSDoIJwdbqnBAc41B
            - 
              name: DATASOURCE_URI
              value: "http://10.0.1.43:31376/importexport/vault/datasource"
          image: "discovery.azurecr.io/atlasv2-api:v2"
          name: atlas-api
          ports: 
            - 
              containerPort: 8000
          resources: {}
      imagePullSecrets: 
        - 
          name: acr-access-secret-discovery
      restartPolicy: Always
