atlas-collector.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  labels:
    app.name: atlas-collector
  name: atlas-collector
  namespace: atlas
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app.name: atlas-collector
    spec:
      containers:
      - env:
        - name: COLLECTION_NAME
          value: AtlasAgentsMsg
        - name: MONGODB_HOST
          value: atlas-mongodb
        - name: MONGODB_PORT
          value: "27017"
        - name: MONGO_USER
          value: atlascollectoruser
        - name: MONGO_PASSWORD
          value: "YXRsYXNjb2xsZWN0b3J1c2VyCg=="
        - name: MONGO_DATABASE
          value: atlas
        - name: POSTGRES_PORT
          value: "5432"
        - name: QUEUE_NAME
          value: AtlasAgentMessageQueue
        - name: RABBIT_HOST
          value: atlas-rabbitmq.atlas.svc.cluster.local
        - name: RABBIT_PASS
          value: bBVW9mGBnX
        - name: RABBIT_PORT
          value: "5672"
        - name: RABBIT_PORT_SSL
          value: "5671"
        - name: RABBITMQSSL_FLAG
          value: ssl
        - name: RABBIT_USER
          value: user
        - name: AUTHSOURCE
          value: VAULT
        - name: VAULT_ADDR
          value: 10.0.1.43:30616
        - name: VAULT_TOKEN
          value: s.T21L5KrpSDoIJwdbqnBAc41B
        - name: SOFTWARE_COLLECTION
          value: AtlasSoftwareData
        image: discovery.azurecr.io/atlas-collector:v3
        name: atlas-collector
        resources: {}
      imagePullSecrets:
      - name: acr-access-secret-discovery
      restartPolicy: Always
