atlas-nginx-svc.yaml
apiVersion: v1

kind: Service

metadata:
   annotations:
   labels:
     io.kompose.service: atlas-nginx
   name: atlas-nginx
   namespace: atlas
spec:
  ports:
  - name: "80"
    port: 80
  type: LoadBalancer
  selector:
    app: atlas-nginx
